--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,20 @@
         "ext-fileinfo": "*",
         "symfony/flex": "^1.3",
         "wikimedia/toolforge-bundle": "^0.18",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "*",
-        "symfony/console": "*",
-        "symfony/dotenv": "*",
-        "symfony/expression-language": "*",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/http-client": "*",
-        "symfony/intl": "*",
-        "symfony/mailer": "*",
+        "symfony/console": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/expression-language": "^4.4",
+        "symfony/framework-bundle": "^4.3",
+        "symfony/http-client": "^4.4",
+        "symfony/intl": "^4.4",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "*",
-        "symfony/security-bundle": "*",
-        "symfony/serializer-pack": "*",
-        "symfony/twig-pack": "*",
-        "symfony/validator": "*",
-        "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/process": "^4.4",
+        "symfony/security-bundle": "^4.3",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/twig-pack": "^1.0",
+        "symfony/validator": "^4.3",
+        "symfony/web-link": "^4.4",
+        "symfony/yaml": "^4.4"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
