Install graphviz for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
 
     - name: Install
       run: |
+        sudo apt-get install graphviz
         cp .env.dist .env
         composer install
         npm install
