--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,8 @@
 /public/bundles/
 /var/
 /vendor/
+/node_modules/
 ###< symfony/framework-bundle ###
-
-###> symfony/phpunit-bridge ###
-.phpunit
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
 *.jar
 
 ###> squizlabs/php_codesniffer ###
@@ -21,3 +16,8 @@
 
 .idea/
 
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
