--- a/composer.json
+++ b/composer.json
@@ -4,35 +4,37 @@
     "type": "project",
     "license": "GPL-3.0-or-later",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
         "ext-fileinfo": "*",
-        "symfony/flex": "^1.3",
-        "wikimedia/toolforge-bundle": "^0.18",
-        "symfony/console": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/expression-language": "^4.4",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/http-client": "^4.4",
-        "symfony/intl": "^4.4",
+        "symfony/asset": "5.0.*",
+        "symfony/console": "5.0.*",
+        "symfony/dotenv": "5.0.*",
+        "symfony/flex": "^1.1",
+        "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "^4.4",
-        "symfony/security-bundle": "^4.3",
+        "symfony/process": "5.0.*",
+        "symfony/security-bundle": "5.0.*",
         "symfony/serializer-pack": "^1.0",
-        "symfony/twig-pack": "^1.0",
-        "symfony/validator": "^4.3",
-        "symfony/web-link": "^4.4",
-        "symfony/yaml": "^4.4"
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/web-link": "5.0.*",
+        "symfony/yaml": "5.0.*",
+        "symfony/filesystem": "5.0.*",
+        "symfony/finder": "5.0.*",
+        "symfony/http-foundation": "5.0.*",
+        "wikimedia/toolforge-bundle": "dev-symfony5"
     },
     "require-dev": {
-        "symfony/debug-pack": "*",
-        "symfony/phpunit-bridge": "*",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "mediawiki/mediawiki-codesniffer": "*",
-        "mediawiki/minus-x": "^0.3"
+        "mediawiki/mediawiki-codesniffer": "^28.0",
+        "symfony/browser-kit": "5.0.*",
+        "symfony/css-selector": "5.0.*",
+        "symfony/phpunit-bridge": "5.0.*"
+    },
+    "config": {
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -68,7 +70,6 @@
             "./bin/console lint:yaml ./config",
             "./bin/console lint:yaml ./.github",
             "phpcs -s .",
-            "minus-x check .",
             "simple-phpunit"
         ]
     },
@@ -78,7 +79,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "5.0.*"
         }
     }
 }
